card styled fixed overflow

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -14,6 +14,7 @@
 	display: flex;
 	img {
 		height: 100%;
+		width: 100%;
 	}
 }
 
